--- a/Templete tesis doctorado/frontmatter/abstract.tex
+++ b/Templete tesis doctorado/frontmatter/abstract.tex
@@ -10,7 +10,7 @@ One of the first observations made in this research is that the GAP framework us
 
 In addition, it was noted that as a consequence of the model architecture chosen by its authors, GAP requires graphs with node features. That dependency was eliminated by using a random walk approach to generate node features. This was an important modification because the algorithm now relies purely on the graph's structure which is enough for the Graph Partitioning Problem.
 
-The last part of this research shows how to use a negative sampling technique to accelerate and improve the process of finding balanced partitions without sacrificing the quality of said partitions. The proposed algorithm shows results comparable with widely used partitioning algorithms like METIS or SCOTCH.
+The last part of this research shows how to use a negative sampling technique to accelerate and improve the process of finding balanced partitions without sacrificing the quality of said partitions. The proposed algorithm shows results comparable with widely used partitioning algorithms like METIS.
 % Include percentages
 %\end{SingleSpace}
 
