--- a/Templete tesis doctorado/frontmatter/resumen.tex
+++ b/Templete tesis doctorado/frontmatter/resumen.tex
@@ -9,6 +9,6 @@ Una de las primeras observaciones hechas en esta investigación es que debido al
 
 Además, se observó que el framework GAP funciona únicamente con grafos con características en sus nodos como consecuencia de la arquitectura seleccionada por sus autores. Esta dependencia fue elmininada a través de un enfoque basado en caminatas aleatorias para generar las características de los nodos. Esta se puede considerar como una modificación importante porque el algoritmo ahora depende únicamente de la estructura del grafo lo cuál es suficiente para el problema del Particionado de Grafos.
 
-La última parte de esta investigación muestra cómo se adaptó una técnica de \textit{negative sampling} al algoritmo propuesto para acelerar y hacer más efectivo el proceso de encontrar particiones balanceadas sin sacrificar la calidad de las particiones antes mencionadas. El algoritmo propuesto mostró resultados comparables con algoritmos ampliamente usados para el particionado de grafos como lo son METIS o SCOTCH.
+La última parte de esta investigación muestra cómo se adaptó una técnica de \textit{negative sampling} al algoritmo propuesto para acelerar y hacer más efectivo el proceso de encontrar particiones balanceadas sin sacrificar la calidad de las particiones antes mencionadas. El algoritmo propuesto mostró resultados comparables con algoritmos ampliamente usados para el particionado de grafos como lo es METIS.
 
 %\clearpage
