--- a/Templete tesis doctorado/references.bib
+++ b/Templete tesis doctorado/references.bib
@@ -609,3 +609,13 @@ keywords = {social network, matrix factorization, network embedding, graph spect
 location = {Marina Del Rey, CA, USA},
 series = {WSDM '18}
 }
+
+@article{deepwalkimage,
+author = {Zhang, Boyao and Yang, Chao and Zhang, Haikuo and Wang, Zongguo and Sun, Jingqi and Wang, Lihua and Zhao, Yonghua and Wang, Yangang},
+year = {2022},
+month = {04},
+pages = {},
+title = {Graph Representation Learning for Similarity Stocks Analysis},
+journal = {Journal of Signal Processing Systems},
+doi = {10.1007/s11265-022-01755-6}
+}
